Fixed minor permission issue allowing for blank NetCenter landing page to be visible to all users.

--- a/src/public/stylesheets/page.css
+++ b/src/public/stylesheets/page.css
@@ -345,7 +345,8 @@ footer p:last-child {
 }
 
 footer p a {
-    text-transform: uppercase;
+    text-decoration: none;
+    cursor: default;
 }
 
 h1 {
